# Argos

./: .env.example  .gitignore  .slugignore  Procfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20260225202255_init/: migration.sql
public/: manifest.json  sw.js
scripts/: copy-cesium.js  scalingo-postbuild.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/cyber-audit/: page.tsx
src/app/login/: page.tsx
src/app/stress-test/: page.tsx
src/components/: ServiceWorkerRegistrar.tsx
src/components/dashboard/: AIPanel.tsx  AircraftDetail.tsx  AlertsPanel.tsx  AnalysisPanel.tsx  AuditPanel.tsx  BriefingPanel.tsx  ClassificationBanner.tsx  CommandCenter.tsx  EntityDetail.tsx  EntityList.tsx  FilterBar.tsx  InstabilityPanel.tsx  (+8 more)
src/lib/: acled.ts  ais.ts  alerts.ts  analysis.ts  audit-trail.ts  auth.ts  cache.ts  circuit-breaker.ts  classification.ts  country-instability.ts  cyber-threats.ts  encryption.ts  entity-extractor.ts  firms.ts  gdacs.ts  geo-convergence.ts  geofencing.ts  infrastructure.ts  intel-feeds.ts  internet-outages.ts  interpolation.ts  llm-chain.ts  military-bases.ts  mistral-tools.ts  mistral.ts  nato-symbols.ts  nuclear-facilities.ts  opensky.ts  password-dictionary.ts  pdf-export.ts  photo-geolocation.ts  pipelines.ts  prisma.ts  redis.ts  satellites.ts  submarine-cables.ts  threat-classifier.ts
src/types/: index.ts  next-auth.d.ts  speech.d.ts
(+42 files in other folders)
